--- a/resume.html
+++ b/resume.html
@@ -3,9 +3,12 @@
 <head>
     <title>Resume</title>
     <style type="text/css">
+    body {
+    background-color:white;
+    }
         nav {
-            background-color: orange;
-            position: fixed;
+            background-color: Grey;
+            position: fixed; 
             left: 0;
             right: 0;
             top: 5px;
@@ -15,18 +18,19 @@
             box-shadow: 0 0 25px 0 black;
         }
         nav * {
-            display: inline;
+            display: flex;
         }
         nav ul {
             display: flex;
             justify-content: center;
             width: 100%;
         }
+           
         nav li {
             margin: 20px;
         }
         nav li a {
-            color: blue;
+            color: Gold;
             text-decoration: none;
         }
     </style>
@@ -34,43 +38,55 @@
 <body>
     <nav>
         <ul>
-            <li><a href="home.html">Home</a></li>
+            <li><a href="index.html">Home</a></li>
             <li><a href="about.html">About</a></li>
             <li><a href="resume.html">Resume</a></li>
             <li><a href="contact.html">Contact Me</a></li>
         </ul>
     </nav>
     <h1>Daniel Humphrey</h1>
-    <p>Pittsburgh, PA | 000-000-0100 | dehumphrey@live.carlow.edu</p>
+    <p>Pittsburgh, PA | (004)004-0004| dehumphrey@live.carlow.edu</p>
     <h2>Education</h2>
     <p>Carlow University, Pittsburgh, PA<br>
-    Bachelor of Science in Business Management, May 2024</p>
+    <p>Bachelor of Science in Business Management, May 2024</p>
     <p>Community College of Allegheny County, Wexford, PA<br>
-    Associate of Science in Liberal Arts, 2021</p>
+    <p>Associate of Science in Liberal Arts, 2021</p>
     <p>University of Pittsburgh Swanson School of Engineering, Pittsburgh, PA<br>
-    Certificate in Basic Machining, CNC programming & operations, 2018</p>
+        
+        <p>Certificate in Basic Machining, CNC programming & operations, 2018</p>
     <h2>Google IT Certifications</h2>
     <ul>
         <li>Cybersecurity Specialization, 2023</li>
         <li>Technical Support Fundamentals, 2023</li>
     </ul>
     <h2>Experience</h2>
-    <p>Quantum Synergi, Pittsburgh, PA, January 2022 - Present</p>
     <ul>
-        <li>Collaborated with a team of experienced web developers and engineers to design and develop web applications.</li>
-        <li>Contributed to the development of user interface (UI) components and features.</li>
-        <li>Assisted in troubleshooting and resolving bugs in existing web applications.</li>
-        <li>Participated in code reviews and adhered to software development best practices.</li>
-        <li>Worked on cross-functional projects and interacted with teams across the company to understand end-user requirements.</li>
-        <li>Engaged in weekly learning sessions and team meetings to stay updated with the latest web technologies and industry trends.</li>
+     <p>Intern Web Developer</p> 
+<p>Innovatech Solutions, New York, NY | June 2022 - August 2022</p>
+<li> Collaborated with a team of 5 developers in the creation of a responsive web application
+for client management, enhancing user engagement by 30%.</li>
+<li>Implemented front-end features using HTML, CSS, and React, ensuring seamless user
+experience across various devices.</li>
+<li>Participated in agile development cycles, including weekly sprints and stand-ups,
+contributing to timely project delivery.</li>
+<li>Conducted thorough testing and debugging of web applications, leading to a 25%
+reduction in reported issues.</li>
+        <br>
+<p>Junior Web Developer (Part-Time)</p> 
+<p>TechStart Inc., San Francisco, CA | September 2022 - Present</p> 
+<li>Developed and maintained an educational platform used by over 10,000 students, focusing on intuitive UI and robust functionality.</li>
+<li>Utilized JavaScript and Angular to create interactive features, such as quizzes and progress tracking, enhancing user engagement.</li>
+<li>Collaborated with backend developers to implement features like user authentication and data storage with Firebase.</li>
+<li>Adopted responsive web design principles to ensure the platform's optimal performance on various screen sizes and devices.</li>
+<li>Actively participated in code reviews, applying best practices to ensure high-quality and maintainable </li>
     </ul>
     <h2>Skills</h2>
     <ul>
         <li>Proficiency in web development technologies, including HTML, CSS, JavaScript, and frameworks such as Angular or React.</li>
-        <li>Familiarity with server-side languages like Python, Ruby, or Java.</li>
+        <li>Familiarity with server-side languages like Python, SQL, or Java.</li>
         <li>Understanding of responsive design and web accessibility standards.</li>
         <li>Strong problem-solving skills and attention to detail.</li>
         <li>Excellent communication and teamwork skills.</li>
+        <li>Leadership</li>
     </ul>
 </body>
-</html>
