--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <title>Welcome to my Website</title>
-    <link rel="stylesheet" type="text/css" href="styles.css">
+  <link rel="stylesheet" type="text/css" href="styles.css">
 </head>
 <body>
     <nav>
@@ -14,6 +14,6 @@
         </ul>
     </nav>
     <h1>Welcome to my Website</h1>
-    <p>This website is designed to provide you with the latest updates about my journey. You can find information about my background, my resume, and ways to contact me. Enjoy your visit!</p>
+    <p>This website will provide the latest updates about my journey. You can find information about my background, my resume, and ways to contact me. Enjoy your visit!</p>
 </body>
 </html>
