--- a/index.html
+++ b/index.html
@@ -2,18 +2,26 @@
 <html>
 <head>
     <title>Welcome to my Website</title>
-  <link rel="stylesheet" type="text/css" href="styles.css">
+    <link rel="stylesheet" type="text/css" href="styles.css">
 </head>
-<body>
-    <nav>
+<body class="body-class">
+    <nav class="nav-class">
         <ul>
-            <li><a href="index.html">Home</a></li>
+            <li><a href="index.html" class="active">Home</a></li>
             <li><a href="about.html">About</a></li>
             <li><a href="resume.html">Resume</a></li>
             <li><a href="contact.html">Contact Me</a></li>
         </ul>
     </nav>
-    <h1>Welcome to my Website</h1>
-    <p>This website will provide the latest updates about my journey. You can find information about my background, my resume, and ways to contact me. Enjoy your visit!</p>
+    <header class="header-class">
+        <h1>Welcome to my Website</h1>
+    </header>
+    <section>
+        <h2 class="title-class">About Me</h2>
+        <p class="text-class">This website is designed to provide you with the latest updates about my journey. You can find information about my background, my resume, and ways to contact me. Enjoy your visit!</p>
+    </section>
+    <footer class="footer-class">
+        <p>© 2024 github.com/DEH10. All rights reserved.</p>
+    </footer>
 </body>
 </html>
