--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <p class="text-class">This website is designed to provide you with the latest updates about my journey. You can find information about my background, my resume, and ways to contact me. Enjoy your visit!</p>
     </section>
     <footer class="footer-class">
-        <p>© 2024 github.com/DEH10. All rights reserved.</p>
+        <p>© 2024 github.com/DEH10.io. All rights reserved.</p>
     </footer>
 </body>
 </html>
